[package]
name = "wikifunc_babel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11"
serde = "1"
serde_json = "1"
futures = "0.3"
regex = "1"
async-recursion = "1.0"
cached = {version = "0.38", features = ["redis_async_std"]}
thiserror = "1.0"