[package]
name = "wikifunc_labelize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11"
serde = "1"
serde_json = "1"
futures = "0.3"
regex = "1"
async-recursion = "1.0"
cached = "0.39"
derive_more = "0.99"
tracing-actix-web = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
dotenv = "0.15.0"